# rag_faiss

./: .gitignore  =3.1  Claude.md  Makefile  PLANNING.md  README.md  TASK.md  pyproject.toml  test_document.txt  test_enhanced_processing.py
.windsurf/rules/: project-guidelines.md
Dummy/: Luke_Lanterme_CV_2024.docx
data/sample_docs/: sample.txt
data/students/: .current_student  registry.json
data/students/student_001_john/vector_store/: faiss_index.meta.json
data/students/student_002_sarah/vector_store/: faiss_index.meta.json
data/students/student_003_alice/vector_store/: faiss_index.meta.json
data/students/student_004_bob/vector_store/: faiss_index.meta.json
data/students/student_005_charlie/vector_store/: faiss_index.meta.json
data/students/student_006_migrated/vector_store/: faiss_index.meta.json
data/students/student_177a0371_joshua_lanterme/vector_store/: faiss_index.meta.json
data/students/student_56e46d37_josh_lanterme/vector_store/: faiss_index.meta.json
data/students/student_9c8b7b7f_joshua_lanterme/vector_store/: faiss_index.meta.json
data/students/student_d4c8b04f_john_doe/vector_store/: faiss_index.meta.json
docs/: enhanced_processing.md  observability.md  prompts.md
prompts/: INITIAL_MVP.md  MIGRATE_INGESTION.md  MIGRATION_OLLAMA.md
prompts/initial/: start.txt
src/: __init__.py  cli.py  config.py  embeddings.py  enhanced_ingestion.py  ingestion.py  langgraph_chain.py  observability.py  prompts.py  qa_chain.py  streamlit_launcher.py  student_manager.py  ui.py
